--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,18 @@ __pycache__/
 # C extensions
 *.so
 
+# venv
+.vais-app-builder
+.vais-app-builder/
+
+# .DS_Store
+.DS_Store
+.DS_Store/
+
+# credentials 
+credentials
+credentials/
+
 # Distribution / packaging
 .Python
 build/
