--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,43 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.2.0
 cachetools==5.3.2
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cloud-sql-python-connector==1.7.0
+cryptography==42.0.5
+frozenlist==1.4.1
 google-api-core==2.17.1
 google-auth==2.28.1
 google-cloud-core==2.4.1
 google-cloud-firestore==2.15.0
+google-cloud-storage==2.14.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
 googleapis-common-protos==1.62.0
+greenlet==3.0.3
 grpcio==1.62.0
 grpcio-status==1.62.0
 idna==3.6
+multidict==6.0.5
 numpy==1.26.4
 pandas==2.2.1
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pycparser==2.21
+PyMySQL==1.1.0
 python-dateutil==2.8.2
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
 six==1.16.0
+SQLAlchemy==2.0.7
+typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==1.26.6
+yarl==1.9.4
