--- a/config/config.yml
+++ b/config/config.yml
@@ -2,6 +2,9 @@ project_id: arun-genai-bb
 credentials_json: ./credentials/key.json
 text_gen_model_name: gemini-1.0-pro
 region: us-central1
+input_file_path: ./data/universities.csv
+local_output_path: ./data/batch
+bucket: vais-app-builder
 cloud_sql_instance: vais-app-builder
 cloud_sql_username: arun
 cloud_sql_password: '9586'
