--- a/requirements.txt
+++ b/requirements.txt
@@ -11,18 +11,23 @@ cryptography==42.0.5
 frozenlist==1.4.1
 google-api-core==2.17.1
 google-auth==2.28.1
+google-cloud-aiplatform==1.38.1
+google-cloud-bigquery==3.17.2
 google-cloud-core==2.4.1
 google-cloud-firestore==2.15.0
+google-cloud-resource-manager==1.12.2
 google-cloud-storage==2.14.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.62.0
 greenlet==3.0.3
+grpc-google-iam-v1==0.13.0
 grpcio==1.62.0
 grpcio-status==1.62.0
 idna==3.6
 multidict==6.0.5
 numpy==1.26.4
+packaging==23.2
 pandas==2.2.1
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -35,6 +40,7 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
+shapely==2.0.3
 six==1.16.0
 SQLAlchemy==2.0.7
 tqdm==4.66.2
