--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-auth==2.28.1
 google-cloud-aiplatform==1.43.0
 google-cloud-bigquery==3.17.2
 google-cloud-core==2.4.1
+google-cloud-discoveryengine==0.11.8
 google-cloud-firestore==2.15.0
 google-cloud-resource-manager==1.12.2
 google-cloud-storage==2.14.0
